--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 8000
-MONGO_URL = "mongodb://localhost:27017/config"
-#MONGO_URL = "mongodb+srv://guptalav450:MOnRF29jk0pc9x28@cluster0.qvmuknt.mongodb.net/tomato?retryWrites=true&w=majority&appName=Cluster0"
+#MONGO_URL = "mongodb://localhost:27017/config"
+MONGO_URL = "mongodb+srv://guptalav450:MOnRF29jk0pc9x28@cluster0.qvmuknt.mongodb.net/tomato?retryWrites=true&w=majority&appName=Cluster0"
 #CLOUDINARY_CLOUD_NAME = "dzogbjozr"
 #CLOUDINARY_API_KEY = 556926219759688
 #CLOUDINARY_API_SECRET = "2jPvzV3KE-MbMLhg6JXX4ywH1uU"
